BUG 3182: Fix share menu in IE7 (z-index off)
QA:
* Make sure bug is fixed

--- a/app/styles/screen-dataset.sass
+++ b/app/styles/screen-dataset.sass
@@ -99,6 +99,8 @@ html, body
     position: absolute
     right: 0
     top: 0
+    .ie7 &
+      z-index: 1
 
     #toolbarOptions
       float: right
